Add some English translations for testing.

--- a/jquery_i18n/i18n/en.json
+++ b/jquery_i18n/i18n/en.json
@@ -8,9 +8,13 @@
 		"last-updated": "2020-02-29",
 		"locale": "en",
 		"message-documentation": "qqq",
-		"AnotherMetadata": "AnotherMedatadataValue"
+		"AnotherMetadata": "AnotherMedatadataValue",
+		"og-title": "COVID-19 Map"
 	},
 	"title": "COVID-19 Map",
+	"confirmed": "Confirmed",
+	"deceased": "Deceased",
+	"recovered": "Recovered",
 	"appname-sub-title": "An example application with jquery.i18n",
 	"appname-header-introduction": "Introduction",
 	"appname-about": "About this application",
