Correct "og:title" key.

--- a/jquery_i18n/i18n/en.json
+++ b/jquery_i18n/i18n/en.json
@@ -9,7 +9,7 @@
 		"locale": "en",
 		"message-documentation": "qqq",
 		"AnotherMetadata": "AnotherMedatadataValue",
-		"og-title": "COVID-19 Map"
+		"og:title": "COVID-19 Map"
 	},
 	"title": "COVID-19 Map",
 	"confirmed": "Confirmed",
